// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input/> iconFix renders an \`preIconFix and sufIconFix\` component  1`] = `
<span
  className="code-ui-input-allIconFix"
  onClick={[Function]}
>
  <span
    className="code-ui-input-icon"
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#user"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前/后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#password"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> iconFix renders an \`preIconFix\` component  1`] = `
<span
  className="code-ui-input-preIconFix"
>
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#user"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前置Icon"
    type="text"
  />
</span>
`;

exports[`<Input/> iconFix renders an \`sufIconFix\` component  1`] = `
<span
  className="code-ui-input-sufIconFix"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#password"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> status render iconFix Disabled renders an \`preIconFix Disabled\` component  1`] = `
<span
  className="code-ui-input-preIconFix code-ui-input-iconDisabled"
>
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#user"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前置Icon"
    type="text"
  />
</span>
`;

exports[`<Input/> status render iconFix Disabled renders an \`preIconFix and sufIconFix Disabled\` component  1`] = `
<span
  className="code-ui-input-allIconFix code-ui-input-iconDisabled"
  onClick={[Function]}
>
  <span
    className="code-ui-input-icon"
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#user"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前/后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#password"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> status render iconFix Disabled renders an \`sufIconFix Disabled\` component  1`] = `
<span
  className="code-ui-input-sufIconFix code-ui-input-iconDisabled"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#password"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> status render iconFix Error renders an \`preIconFix Error\` component  1`] = `
<span
  className="code-ui-input-preIconFix code-ui-input-iconError"
>
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#user"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前置Icon"
    type="text"
  />
</span>
`;

exports[`<Input/> status render iconFix Error renders an \`preIconFix and sufIconFix Error\` component  1`] = `
<span
  className="code-ui-input-allIconFix code-ui-input-iconError"
  onClick={[Function]}
>
  <span
    className="code-ui-input-icon"
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#user"
      />
    </svg>
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="前/后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#password"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> status render iconFix Error renders an \`sufIconFix Error\` component  1`] = `
<span
  className="code-ui-input-sufIconFix code-ui-input-iconError"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="后置Icon"
    type="text"
  />
  <span
    className="code-ui-input-icon"
    onClick={[Function]}
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#password"
      />
    </svg>
  </span>
</span>
`;

exports[`<Input/> status render strFix Disabled renders an \`preStrFix Disabled\` component  1`] = `
<span
  className="code-ui-input-preStrFix code-ui-input-strDisabled"
>
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    http://
  </div>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="固定文字块 Error"
    type="text"
  />
</span>
`;

exports[`<Input/> status render strFix Disabled renders an \`preStrFix and sufStrFix Disabled\` component  1`] = `
<span
  className="code-ui-input-allStrFix code-ui-input-strDisabled"
  onClick={[Function]}
>
  <span
    className="code-ui-input-str"
  >
    http://
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="baidu"
    type="text"
  />
  <span
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </span>
</span>
`;

exports[`<Input/> status render strFix Disabled renders an \`sufStrFix Disabled\` component  1`] = `
<span
  className="code-ui-input-sufStrFix code-ui-input-strDisabled"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="http://baidu"
    type="text"
  />
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </div>
</span>
`;

exports[`<Input/> status render strFix Error renders an \`preStrFix Error\` component  1`] = `
<span
  className="code-ui-input-preStrFix code-ui-input-strError"
>
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    http://
  </div>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="固定文字块 Error"
    type="text"
  />
</span>
`;

exports[`<Input/> status render strFix Error renders an \`preStrFix and sufStrFix Error\` component  1`] = `
<span
  className="code-ui-input-allStrFix code-ui-input-strError"
  onClick={[Function]}
>
  <span
    className="code-ui-input-str"
  >
    http://
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="baidu"
    type="text"
  />
  <span
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </span>
</span>
`;

exports[`<Input/> status render strFix Error renders an \`sufStrFix Error\` component  1`] = `
<span
  className="code-ui-input-sufStrFix code-ui-input-strError"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="http://baidu"
    type="text"
  />
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </div>
</span>
`;

exports[`<Input/> strFix renders an \`preStrFix and sufStrFix\` component  1`] = `
<span
  className="code-ui-input-allStrFix"
  onClick={[Function]}
>
  <span
    className="code-ui-input-str"
  >
    http://
  </span>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="baidu"
    type="text"
  />
  <span
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </span>
</span>
`;

exports[`<Input/> strFix renders an \`preStrFix\` component  1`] = `
<span
  className="code-ui-input-preStrFix"
>
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    http://
  </div>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="baidu.com"
    type="text"
  />
</span>
`;

exports[`<Input/> strFix renders an \`sufStrFix\` component  1`] = `
<span
  className="code-ui-input-sufStrFix"
>
  <input
    className="code-ui-input-inputLabel"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="http://baidu"
    type="text"
  />
  <div
    className="code-ui-input-str"
    onClick={[Function]}
  >
    .com
  </div>
</span>
`;

exports[`<Input/> type renders an \`type=number\` component 1`] = `
<input
  className="code-ui-input-inputLabel"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="number"
  type="number"
/>
`;

exports[`<Input/> type renders an \`type=password\` component 1`] = `
<input
  className="code-ui-input-inputLabel"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="password"
  type="password"
/>
`;

exports[`<Input/> type renders an \`type=text\` component 1`] = `
<input
  className="code-ui-input-inputLabel"
  disabled={false}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="text"
  type="text"
/>
`;
